--- a/CAPSTONE-5-jupyter-labs-eda-dataviz.ipynb
+++ b/CAPSTONE-5-jupyter-labs-eda-dataviz.ipynb
@@ -1817,8 +1817,8 @@
    "source": [
     "# HINT use groupby method on Orbit column and get the mean of Class column\n",
     "sns.barplot(y=\"Class\", x=\"Orbit\", data=orbit_avg)\n",
-    "plt.xlabel(\"Pay Load Mass (kg)\",fontsize=20)\n",
-    "plt.ylabel(\"Launch Site\",fontsize=20)\n",
+    "plt.xlabel(\"Orbit\",fontsize=20)\n",
+    "plt.ylabel(\"Orbit\",fontsize=20)\n",
     "plt.show()"
    ]
   },
