--- a/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "101"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,18 +162,10 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) table SPACEXTABLE already exists\n",
+      "[SQL: create table SPACEXTABLE as select * from SPACEXTBL where Date is not null]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -201,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +233,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +356,7 @@
        " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +410,7 @@
        "[(48213,)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -463,22 +455,22 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2928.4</td>\n",
+       "            <td>2534.6666666666665</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(2928.4,)]"
+       "[(2534.6666666666665,)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT AVG(PAYLOAD_MASS__KG_) FROM SPACEXTABLE WHERE Booster_Version='F9 v1.1'"
+    "%sql SELECT AVG(PAYLOAD_MASS__KG_) FROM SPACEXTABLE WHERE Booster_Version like 'F9 v1.1%'"
    ]
   },
   {
@@ -640,7 +632,7 @@
     }
    ],
    "source": [
-    "%sql SELECT * \\\n",
+    "%sql SELECT * http://localhost:8888/notebooks/Documents/Perso/Jupyter_Notebooks/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb#List-the-names-of-the-boosters-which-have-success-in-drone-ship-and-have-payload-mass-greater-than-4000-but-less-than-6000\\\n",
     "FROM SPACEXTABLE \\\n",
     "WHERE PAYLOAD_MASS__KG_ >=4000 \\\n",
     "AND PAYLOAD_MASS__KG_ <=6000 \\\n",
