--- a/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -487,8 +487,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -518,7 +520,7 @@
        "[('2015-12-22',)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -546,93 +548,14 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) unrecognized token: \"\\\"\n",
+      "[SQL: SELECT * \\ #List-the-names-of-the-boosters-which-have-success-in-drone-ship-and-have-payload-mass-greater-than-4000-but-less-than-6000 FROM SPACEXTABLE WHERE PAYLOAD_MASS__KG_ >=4000 AND PAYLOAD_MASS__KG_ <=6000 AND Landing_Outcome='Success (drone ship)']\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Date</th>\n",
-       "            <th>Time (UTC)</th>\n",
-       "            <th>Booster_Version</th>\n",
-       "            <th>Launch_Site</th>\n",
-       "            <th>Payload</th>\n",
-       "            <th>PAYLOAD_MASS__KG_</th>\n",
-       "            <th>Orbit</th>\n",
-       "            <th>Customer</th>\n",
-       "            <th>Mission_Outcome</th>\n",
-       "            <th>Landing_Outcome</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2016-05-06</td>\n",
-       "            <td>5:21:00</td>\n",
-       "            <td>F9 FT B1022</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>JCSAT-14</td>\n",
-       "            <td>4696</td>\n",
-       "            <td>GTO</td>\n",
-       "            <td>SKY Perfect JSAT Group</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2016-08-14</td>\n",
-       "            <td>5:26:00</td>\n",
-       "            <td>F9 FT B1026</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>JCSAT-16</td>\n",
-       "            <td>4600</td>\n",
-       "            <td>GTO</td>\n",
-       "            <td>SKY Perfect JSAT Group</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2017-03-30</td>\n",
-       "            <td>22:27:00</td>\n",
-       "            <td>F9 FT  B1021.2</td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>SES-10</td>\n",
-       "            <td>5300</td>\n",
-       "            <td>GTO</td>\n",
-       "            <td>SES</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2017-10-11</td>\n",
-       "            <td>22:53:00</td>\n",
-       "            <td>F9 FT  B1031.2</td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>SES-11 / EchoStar 105</td>\n",
-       "            <td>5200</td>\n",
-       "            <td>GTO</td>\n",
-       "            <td>SES EchoStar</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success (drone ship)</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('2016-05-06', '5:21:00', 'F9 FT B1022', 'CCAFS LC-40', 'JCSAT-14', 4696, 'GTO', 'SKY Perfect JSAT Group', 'Success', 'Success (drone ship)'),\n",
-       " ('2016-08-14', '5:26:00', 'F9 FT B1026', 'CCAFS LC-40', 'JCSAT-16', 4600, 'GTO', 'SKY Perfect JSAT Group', 'Success', 'Success (drone ship)'),\n",
-       " ('2017-03-30', '22:27:00', 'F9 FT  B1021.2', 'KSC LC-39A', 'SES-10', 5300, 'GTO', 'SES', 'Success', 'Success (drone ship)'),\n",
-       " ('2017-10-11', '22:53:00', 'F9 FT  B1031.2', 'KSC LC-39A', 'SES-11 / EchoStar 105', 5200, 'GTO', 'SES EchoStar', 'Success', 'Success (drone ship)')]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * http://localhost:8888/notebooks/Documents/Perso/Jupyter_Notebooks/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb#List-the-names-of-the-boosters-which-have-success-in-drone-ship-and-have-payload-mass-greater-than-4000-but-less-than-6000\\\n",
+    "%sql SELECT * \\ #List-the-names-of-the-boosters-which-have-success-in-drone-ship-and-have-payload-mass-greater-than-4000-but-less-than-6000\\\n",
     "FROM SPACEXTABLE \\\n",
     "WHERE PAYLOAD_MASS__KG_ >=4000 \\\n",
     "AND PAYLOAD_MASS__KG_ <=6000 \\\n",
@@ -653,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +607,7 @@
        "[(100,)]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
