--- a/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -548,14 +548,45 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "(sqlite3.OperationalError) unrecognized token: \"\\\"\n",
-      "[SQL: SELECT * \\ #List-the-names-of-the-boosters-which-have-success-in-drone-ship-and-have-payload-mass-greater-than-4000-but-less-than-6000 FROM SPACEXTABLE WHERE PAYLOAD_MASS__KG_ >=4000 AND PAYLOAD_MASS__KG_ <=6000 AND Landing_Outcome='Success (drone ship)']\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 FT B1022</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT B1026</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT  B1021.2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT  B1031.2</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 FT B1022',), ('F9 FT B1026',), ('F9 FT  B1021.2',), ('F9 FT  B1031.2',)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * \\ #List-the-names-of-the-boosters-which-have-success-in-drone-ship-and-have-payload-mass-greater-than-4000-but-less-than-6000\\\n",
+    "%sql SELECT Booster_Version \\\n",
     "FROM SPACEXTABLE \\\n",
     "WHERE PAYLOAD_MASS__KG_ >=4000 \\\n",
     "AND PAYLOAD_MASS__KG_ <=6000 \\\n",
