--- a/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/CAPSTONE-4-jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -608,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -744,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -761,188 +763,74 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>Date</th>\n",
-       "            <th>Time (UTC)</th>\n",
        "            <th>Booster_Version</th>\n",
-       "            <th>Launch_Site</th>\n",
-       "            <th>Payload</th>\n",
-       "            <th>PAYLOAD_MASS__KG_</th>\n",
-       "            <th>Orbit</th>\n",
-       "            <th>Customer</th>\n",
-       "            <th>Mission_Outcome</th>\n",
-       "            <th>Landing_Outcome</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2019-11-11</td>\n",
-       "            <td>14:56:00</td>\n",
        "            <td>F9 B5 B1048.4</td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 1 v1.0, SpaceX CRS-19 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2020-01-07</td>\n",
-       "            <td>2:33:00</td>\n",
-       "            <td>F9 B5 B1049.4</td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 2 v1.0, Crew Dragon in-flight abort test </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-01-29</td>\n",
-       "            <td>14:07:00</td>\n",
-       "            <td>F9 B5 B1051.3</td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 3 v1.0, Starlink 4 v1.0 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-02-17</td>\n",
-       "            <td>15:05:00</td>\n",
-       "            <td>F9 B5 B1056.4</td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 4 v1.0, SpaceX CRS-20</td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Failure</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-03-18</td>\n",
-       "            <td>12:16:00</td>\n",
        "            <td>F9 B5 B1048.5</td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>Starlink 5 v1.0, Starlink 6 v1.0 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Failure</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2020-04-22</td>\n",
-       "            <td>19:30:00</td>\n",
-       "            <td>F9 B5 B1051.4</td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>Starlink 6 v1.0, Crew Dragon Demo-2 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
+       "            <td>F9 B5 B1049.4</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2020-06-04</td>\n",
-       "            <td>1:25:00</td>\n",
        "            <td>F9 B5 B1049.5</td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 7 v1.0, Starlink 8 v1.0</td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX, Planet Labs</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2020-09-03</td>\n",
-       "            <td>12:46:14</td>\n",
-       "            <td>F9 B5 B1060.2 </td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>Starlink 11 v1.0, Starlink 12 v1.0 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-10-06</td>\n",
-       "            <td>11:29:34</td>\n",
-       "            <td>F9 B5 B1058.3 </td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>Starlink 12 v1.0, Starlink 13 v1.0 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-10-18</td>\n",
-       "            <td>12:25:57</td>\n",
-       "            <td>F9 B5 B1051.6</td>\n",
-       "            <td>KSC LC-39A</td>\n",
-       "            <td>Starlink 13 v1.0, Starlink 14 v1.0 </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-10-24</td>\n",
-       "            <td>15:31:34</td>\n",
-       "            <td>F9 B5 B1060.3</td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 14 v1.0, GPS III-04  </td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2020-11-25</td>\n",
-       "            <td>2:13:00</td>\n",
        "            <td>F9 B5 B1049.7 </td>\n",
-       "            <td>CCAFS SLC-40</td>\n",
-       "            <td>Starlink 15 v1.0, SpaceX CRS-21</td>\n",
-       "            <td>15600</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Success</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1056.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1058.3 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.2 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.3</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('2019-11-11', '14:56:00', 'F9 B5 B1048.4', 'CCAFS SLC-40', 'Starlink 1 v1.0, SpaceX CRS-19 ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-01-07', '2:33:00', 'F9 B5 B1049.4', 'CCAFS SLC-40', 'Starlink 2 v1.0, Crew Dragon in-flight abort test ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-01-29', '14:07:00', 'F9 B5 B1051.3', 'CCAFS SLC-40', 'Starlink 3 v1.0, Starlink 4 v1.0 ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-02-17', '15:05:00', 'F9 B5 B1056.4', 'CCAFS SLC-40', 'Starlink 4 v1.0, SpaceX CRS-20', 15600, 'LEO', 'SpaceX', 'Success', 'Failure'),\n",
-       " ('2020-03-18', '12:16:00', 'F9 B5 B1048.5', 'KSC LC-39A', 'Starlink 5 v1.0, Starlink 6 v1.0 ', 15600, 'LEO', 'SpaceX', 'Success', 'Failure'),\n",
-       " ('2020-04-22', '19:30:00', 'F9 B5 B1051.4', 'KSC LC-39A', 'Starlink 6 v1.0, Crew Dragon Demo-2 ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-06-04', '1:25:00', 'F9 B5 B1049.5', 'CCAFS SLC-40', 'Starlink 7 v1.0, Starlink 8 v1.0', 15600, 'LEO', 'SpaceX, Planet Labs', 'Success', 'Success'),\n",
-       " ('2020-09-03', '12:46:14', 'F9 B5 B1060.2 ', 'KSC LC-39A', 'Starlink 11 v1.0, Starlink 12 v1.0 ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-10-06', '11:29:34', 'F9 B5 B1058.3 ', 'KSC LC-39A', 'Starlink 12 v1.0, Starlink 13 v1.0 ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-10-18', '12:25:57', 'F9 B5 B1051.6', 'KSC LC-39A', 'Starlink 13 v1.0, Starlink 14 v1.0 ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-10-24', '15:31:34', 'F9 B5 B1060.3', 'CCAFS SLC-40', 'Starlink 14 v1.0, GPS III-04  ', 15600, 'LEO', 'SpaceX', 'Success', 'Success'),\n",
-       " ('2020-11-25', '2:13:00', 'F9 B5 B1049.7 ', 'CCAFS SLC-40', 'Starlink 15 v1.0, SpaceX CRS-21', 15600, 'LEO', 'SpaceX', 'Success', 'Success')]"
+       "[('F9 B5 B1048.4',),\n",
+       " ('F9 B5 B1048.5',),\n",
+       " ('F9 B5 B1049.4',),\n",
+       " ('F9 B5 B1049.5',),\n",
+       " ('F9 B5 B1049.7 ',),\n",
+       " ('F9 B5 B1051.3',),\n",
+       " ('F9 B5 B1051.4',),\n",
+       " ('F9 B5 B1051.6',),\n",
+       " ('F9 B5 B1056.4',),\n",
+       " ('F9 B5 B1058.3 ',),\n",
+       " ('F9 B5 B1060.2 ',),\n",
+       " ('F9 B5 B1060.3',)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM SPACEXTABLE WHERE PAYLOAD_MASS__KG_=(SELECT MAX(PAYLOAD_MASS__KG_) FROM SPACEXTABLE)"
+    "%sql SELECT DISTINCT Booster_Version \\\n",
+    "FROM SPACEXTABLE \\\n",
+    "WHERE PAYLOAD_MASS__KG_=(SELECT MAX(PAYLOAD_MASS__KG_) FROM SPACEXTABLE) \\\n",
+    "ORDER BY Booster_Version"
    ]
   },
   {
